services.yaml
apiVersion: v1
kind: Service
metadata:
   name: nginx
   namespace: labs
specs: 
  selector: 
    app: nginx
  ports:
    protocol: TCP
    port: 80
    targetPort: 80
type: ClusterIP
